--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -22,8 +22,16 @@
         color: white;
       }
     </style>
+    <!-- inline script -->
+    <!-- <script>
+      let js = "amazing";
+      if (js === "amazing") alert("JS is FUN!");
+
+      console.log(40 + 5 - 34 + 17);
+    </script> -->
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
+    <script src="script.js"></script>
   </body>
 </html>
